--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Nota de Supletorio</h1>
-        <p class="descripcion">Aquí podrás calcular cuánto necesitas alcanzar en el examen final (supletorio) para aprobar la materia.</p>
+        <h1>Calculadora de Nota Supletorio EPN (By GN Scientia)</h1>
+        <p class="descripcion">Calcula de manera fácil cuánto necesitas alcanzar en el examen final (supletorio) para aprobar la asignatura.</p>
         
         <label for="notaParcial">Nota Parcial (35%):</label>
         <input type="number" id="notaParcial" step="0.1" min="0" max="10">
