--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Nota Supletorio EPN (By GN Scientia)</h1>
+        <h1>Calculadora de Nota Supletorio EPN (by GN Scientia)</h1>
         <p class="descripcion">Calcula de manera fácil cuánto necesitas alcanzar en el examen final (supletorio) para aprobar la asignatura.</p>
         
         <label for="notaParcial">Nota Parcial (35%):</label>
