--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Notas Supletorio</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Ícono personalizado -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +18,9 @@
         <button onclick="calcularNota()">Calcular</button>
 
         <p id="resultado"></p>
+
+        <!-- Botón para redirigir a otra página -->
+        <button onclick="redireccionar()">Ir a Otra Página</button>
     </div>
     <script src="script.js"></script>
 </body>
