--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Notas Supletorio</title>
+    <title>Calcu Suple EPN (by GN Scientia🦉)</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Ícono personalizado -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Notas Supletorio</h1>
+        <h1>Calculadora de Nota Supletorio-EPN🦉 (by GN Scientia)</h1>
         <p class="descripcion">Aquí podrás calcular cuánto necesitas alcanzar en el examen final (supletorio) para aprobar la materia.</p>
 
-        <label for="nota_semestre">Ingrese la nota del estudiante en el semestre (sobre 40):</label>
-        <input type="number" id="nota_semestre" name="nota_semestre" required placeholder="Ejemplo: 30">
+        <label for="nota_semestre">Ingresa tu nota del semestre (sobre 40):</label>
+        <input type="number" id="nota_semestre" name="nota_semestre" required placeholder="Ejemplo: 28.39">
 
-        <button onclick="calcularNota()">Calcular</button>
+        <button onclick="calcularNota()">Calcular Nota</button>
 
         <p id="resultado"></p>
 
         <!-- Botón para redirigir a otra página -->
-        <button onclick="redireccionar()">Ir a Otra Página</button>
+        <button onclick="redireccionar()">🎯Tengo Suerte🤩</button>
     </div>
     <script src="script.js"></script>
 </body>
